--- a/argochart/templates/deploy.yaml
+++ b/argochart/templates/deploy.yaml
@@ -6,7 +6,7 @@ metadata:
     app: hello-world
   name: hello-world
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas.count }}
   selector:
     matchLabels:
       app: hello-world
